--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
+  <link rel="apple-touch-icon" sizes="114x114" href="../assets/ico/apple-touch-icon-114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="../assets/ico/apple-touch-icon-72.png">
+  <link rel="apple-touch-icon" href="../assets/ico/apple-touch-icon-57.png">
+  <%= favicon_link_tag %>
 </head>
 <body>
 
