--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,8 @@
-<h1>Walk 'n Talk Home</h1>
-<p>Know whether your friends are available or not!</p>
 <div class="center hero-unit">
-  <h1>Welcome to Walk n Talk</h1>
+  <h1>Welcome to Walk 'N Talk!</h1>
 
   <h2>
-    This is the home page for the ES21 project, Walk n Talk
+    This is the home page for the ES21 project
   </h2>
 
   <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
