--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,12 @@
-<div class="center hero-unit">
-  <h1>Welcome to Walk 'N Talk!</h1>
+<div class="center row-fluid">
+  <div class="center hero-unit">
+    <h1>Welcome to Walk 'N Talk!</h1>
 
-  <h2>
-    This is the home page for the ES21 project
-  </h2>
+    <h2>
+      This is the home page for the ES21 project
+    </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+    <%= link_to "Sign in", signin_path, class: "btn btn-large btn-primary" %>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-large" %>
+  </div>
 </div>
