--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,19 @@
-<h1>New user</h1>
+<div class="center row-fluid">
+<h2>Sign up!</h2>
 
-<%= render 'form' %>
+  <%= form_for @user do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
 
-<%= link_to 'Back', users_path %>
+    <%= f.label :email %>
+    <%= f.email_field :email %>
+
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+    <br/>
+    <%= f.submit "Sign Up!" %>
+  <% end %>
+</div>
