--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,20 @@
 <div class="center row-fluid">
-<h2>Sign up!</h2>
+  <h2>Sign up!</h2>
 
-  <%= form_for @user do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= form_for @user do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
 
-    <%= f.label :email %>
-    <%= f.email_field :email %>
+      <%= f.label :email %>
+      <%= f.email_field :email %>
 
-    <%= f.label :password %>
-    <%= f.password_field :password %>
+      <%= f.label :password %>
+      <%= f.password_field :password %>
 
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-    <br/>
-    <%= f.submit "Sign Up!" %>
-  <% end %>
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation %>
+      <br/>
+      <%= f.submit "Sign Up!", class: "btn btn-primary" %>
+    <% end %>
+    <p> Already have an account? <%= link_to "Sign in", signin_path %></p>
 </div>
