--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,16 +10,6 @@
   <%= @user.email %>
 </p>
 
-<p>
-  <b>Password:</b>
-  <%= @user.password %>
-</p>
-
-<p>
-  <b>Password confirmation:</b>
-  <%= @user.password_confirmation %>
-</p>
-
-
 <%= link_to 'Edit', edit_user_path(@user) %> |
+<%= link_to 'Sign out', signout_path, method: "delete" %> |
 <%= link_to 'Back', users_path %>
