--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,11 @@
-<div class="navbar navbar-static-top">
+<div class="navbar navbar-static-top row-fluid">
   <div class="navbar-inner">
-    <div class="container">
+    <div class="container-fluid">
       <ul class="nav pull-left">
         <li><%= link_to "amblr", root_path, class: "brand" %></li>
       </ul><ul class="nav pull-right">
         <% if current_user.nil? %>
           <li><%= link_to "Sign in", signin_path %></li>
-          <li><%= link_to "Create account", signup_path %></li>
         <% else %>
           <%= yield :navlinks %>
           <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
