--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,8 +3,11 @@
     <div class="center hero-unit">
       <h1>amblr</h1>
 
-      <h2>Always know who's available</h2>
+      <h2>who's <i>actually</i> available?</h2>
 
+      <p>
+        <%= link_to "Create account", signup_path, class: "btn btn-large btn-primary" %>
+      </p>
   <% else %>
     <div class="span3">
       <h2>People</h2>
