--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  padding-top: 0px;
 }
 
 section {
@@ -46,6 +46,9 @@ h2 {
   text-align: center;
   font-weight: normal;
   color: #999;
+  i {
+    color: #666;
+  }
 }
 
 p {
