--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center row-fluid">
   <% if current_user.nil? %>
     <div class="center hero-unit">
-      <h1>amblr</h1>
+      <h1>rambl</h1>
 
       <h2>who's <i>actually</i> available?</h2>
 
