--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-inner">
     <div class="container-fluid">
       <ul class="nav pull-left">
-        <li><%= link_to "amblr", root_path, class: "brand" %></li>
+        <li><%= link_to "rambl", root_path, class: "brand" %></li>
       </ul><ul class="nav pull-right">
         <% if current_user.nil? %>
           <li><%= link_to "Sign in", signin_path %></li>
