--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,14 +6,12 @@
 </style>
 <script type="text/javascript">
   $(document).ready(function() {
-      var count = 0;
-      setInterval(function () {
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(showPosition);
-        } else {
-          $('#locator').html("Speed unknown");
-        }
-      }, 3000);
+   
+      if (navigator.geolocation) {
+        navigator.geolocation.watchPosition(showPosition);
+      } else {
+        $('#locator').html("Please enable geolocation.");
+      }
       
       function showPosition(position) {
           $('#locator').html("Speed: " + (position.coords.speed == null ? "?" : position.coords.speed) + " m/s");
